@@ -51,16 +51,16 @@ INSTALL_EXEC_PREFIX=@exec_prefix@
 SHLIB_TAIL_COMP=@SHLIB_TAIL_COMP@
 
 KRB5MANROOT = $(INSTALL_PREFIX)/man
-ADMIN_BINDIR = $(INSTALL_PREFIX)/admin
+ADMIN_BINDIR = $(INSTALL_EXEC_PREFIX)/admin
 SERVER_BINDIR = $(INSTALL_EXEC_PREFIX)/sbin
 CLIENT_BINDIR = $(INSTALL_EXEC_PREFIX)/bin
 ADMIN_MANDIR = $(KRB5MANROOT)/man8
 SERVER_MANDIR = $(KRB5MANROOT)/man8
 CLIENT_MANDIR = $(KRB5MANROOT)/man1
 FILE_MANDIR = $(KRB5MANROOT)/man5
-KRB5_LIBDIR = $(INSTALL_PREFIX)/lib
-KRB5_SHLIBDIR = $(INSTALL_PREFIX)/lib$(SHLIB_TAIL_COMP)
-KRB5_INCDIR = $(INSTALL_PREFIX)/include
+KRB5_LIBDIR = $(INSTALL_EXEC_PREFIX)/lib
+KRB5_SHLIBDIR = $(INSTALL_EXEC_PREFIX)/lib$(SHLIB_TAIL_COMP)
+KRB5_INCDIR = $(INSTALL_EXEC_PREFIX)/include
 KRB5_INCSUBDIRS = \
 	$(KRB5_INCDIR)/asn.1 \
 	$(KRB5_INCDIR)/gssapi
